...
              android:orientation="vertical"
              android:gravity="center"
              android:layout_height="match_parent">

    <!--<include layout="@layout/base_toolbar"/>-->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/myCoordinatorLayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        >

        <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <android.support.design.widget.FloatingActionButton
            android:src="@drawable/ic_add_white_24dp"
            android:id="@+id/addToDoItemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            />

...
